# job-tracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  database.py  main.py  models.py  schemas.py
app/routers/: applications.py  auth.py  contacts.py  stats.py
